--- a/portfolieTemplate/index.html
+++ b/portfolieTemplate/index.html
@@ -13,7 +13,7 @@
 Mit navn er Mads Peter Steenstrup og jeg er lærer i Informatik på Rysensteen Gymnasium.
 </p>
 
-<img src="mp3.gif" width=40%>
+<img src="mp.jpeg" width=40%>
 
 <h2> links til projekt-undersider </h2>
 
