--- a/portfolieTemplate/webteknologier.html
+++ b/portfolieTemplate/webteknologier.html
@@ -16,7 +16,7 @@
     <li>Kodeeksempler som I beskriver grundigt.</li>
   </ul>
 
-<a href="webteknologier.html"> Tilbage til hovedsiden </a>
+<a href="index.html"> Tilbage til hovedsiden </a>
 
 
 <h2>eksempel på dokumentation af kode</h2>
