--- a/InformatikRysensteen/index.html
+++ b/InformatikRysensteen/index.html
@@ -23,7 +23,7 @@
   <div class="leftcolumn">
     <div class="card">
       <h2>Hvorfor vælge informatik?</h2>
-      <video src="promovideo.mp4" width=100% controls preload></video>
+      <video src="filer/promovideo.mp4" width=100% controls preload></video>
 
       <p> Informatik er et fag om IT og teknologi. Vi beskæftiger os med teknologi for at blive klogere på den, men også for at kunne forstå hvordan teknologi påvirker os mennesker og det samfund vi lever i. Informatik er projektbaseret hvor I skal udvikle it-løsninger og dokumentere jeres arbejde.
       <br>
@@ -39,25 +39,25 @@
 
 <div class="card">
   <h1>Præsentation af faget</h1>
-<video src="Informatik.mp4" width=100% controls preload></video>
+<video src="filer/Informatik.mp4" width=100% controls preload></video>
 </div>
 
     <div class="card">
       <h2>Slides</h2>
-      <p><iframe src="praesentation.pdf" width=100% height=600px >Præsentation</iframe></p>
+      <p><iframe src="filer/praesentation.pdf" width=100% height=600px >Præsentation</iframe></p>
     </div>
   </div>
   <div class="rightcolumn">
     <div class="card">
       <h2>Underviser</h2>
-      <img src="mig.jpeg" width=100%></img>
+      <img src="filer/mig.jpeg" width=100%></img>
       <p>Jeg hedder Mads Peter og underviser i Fysik, Matematik og Informatik. </p>
       <p> Hvis vi er heldige og der kommer mange hold så underviser Christina også og hun er god!</p>
     </div>
 
     <div class="card">
       Link til Hjemmesiden
-      <a href="https://mpsteenstrup.github.io/webteknologier/InformatikRysensteen/index.html"><img src="QR.png" width=100%></img></a>
+      <a href="https://mpsteenstrup.github.io/webteknologier/InformatikRysensteen/index.html"><img src="filer/QR.png" width=100%></img></a>
     </div>
 
     <div class="card">
