--- a/InformatikRysensteen/om.html
+++ b/InformatikRysensteen/om.html
@@ -21,10 +21,10 @@
 <p>
   Websiden er lavet af Mads Peter Steenstrup for at reklamere for informatikfaget på Rysensteen Gymnasium.
 <br>
-  Den virker også som guideline i elevernes arbejde med egne websider. I forløbet Webteknolier skal eleverne udvikle deres egen hjemmeside med fokus på design og brugervenlighed.
+  Den virker også som guideline i elevernes arbejde med egne websider. I forløbet Webteknologier skal eleverne udvikle deres egen hjemmeside med fokus på design og brugervenlighed.
 <br>
 <br>
-Vi underviser ud fra undervisningsmateriale som ligger på github og er frit tilgængeligt af lærere og elever, <a href="https://github.com/mpsteenstrup">https://github.com/mpsteenstrup</a>.
+Vi underviser ud fra undervisningsmateriale som ligger på github og er frit tilgængeligt af lærere og elever, <a href="https://github.com/mpsteenstrup/InformatikRysensteen">https://github.com/mpsteenstrup/InformatikRysensteen</a>.
 </p>
 </div>
 
