--- a/portfolieTemplate/webteknologier.html
+++ b/portfolieTemplate/webteknologier.html
@@ -20,22 +20,10 @@
 
 
 <h2>eksempel på dokumentation af kode</h2>
-Nedenstående er en den simpleste kode til en hjemmeside
-<pre>
-  <code>
-  &lt;!DOCTYPE html&gt;
-  &lt;html&gt;
-  &lt;head&gt;
-  &lt;meta charset="UTF-8"&gt;
-  &lt;/head&gt;
-  &lt;body&gt;
-  Hello world.
-  &lt;/body&gt;
-  &lt;/html&gt;
-  </code>
-</pre>
+Nedenstående er en den simpleste kode til en hjemmeside indsat som billede
+<img src="Kodestump.png" width=40%>
 
-Imellem header tags, &lt;head&gt; &lt;/head&gt;, placeres metadata som browseren skal bruge for at vise siden rigtigt. Her bruges &lt;meta charset="UTF-8"&gt; så browseren kan skrive æåø rigtigt.
+Imellem header tags, "head" "/head", placeres metadata som browseren skal bruge for at vise siden rigtigt. Her bruges meta charset="UTF-8" så browseren kan skrive æåø rigtigt.
 
 
 
