--- a/InformatikRysensteen/index.html
+++ b/InformatikRysensteen/index.html
@@ -65,10 +65,10 @@
       <ul>
         <li><a href="https://github.com/mpsteenstrup/spilLegOgSamarbejde">Spil, leg og samarbejde.</a></li>
         <li><a href="https://github.com/mpsteenstrup/AstroPi2020/tree/master/informatik2020">Astro-Pi, programmer på ISS.</a></li>
-        <li>IT sikkerhed.</li>
+        <li><a href="https://github.com/mpsteenstrup/InformatikRysensteen/blob/main/dokumenter/itsikkerhed.md">IT-sikkerhed.</a></li>        
         <li><a href="https://github.com/mpsteenstrup/mpsteenstrup.github.io">Webteknologier og hjemmesider.</a></li>
         <li><a href="http://mpsteenstrup.dk/Billedmanipulation.html">Billedmanipulation.</a></li>
-        <li><a href="https://github.com/mpsteenstrup/Covid19DatabaseTutorial">Covid-19 data og data-visualisering.</a></li>
+        <li><a href="https://github.com/mpsteenstrup/ML">Kunstig Intelligens</a></li>
       </ul>
     </div>
 
@@ -99,6 +99,7 @@
         <li>Er det nørdet? <b>Ja</b>, vi nørder teknologi, men også mennesker og hvordan vi bliver påvirket af teknologi.</li>
         <li>Er det svært? <b>Nej måske ja</b>.</li>
         <li>Er det hele gruppearbejde? <b>Nej</b>, men det meste er. Vi laver projekter og det er sjovest i grupper.</li>
+        <li>Skal man læse meget? <b>Nej</b> det er ikke et læsetungt fag. Vi arbejder med projekterne og en gang i mellem skal de have en skalle for at blive færdige, men der er ikke dag til dag lektier.</li>
       </ul>
 
 
