--- a/InformatikRysensteen/index.html
+++ b/InformatikRysensteen/index.html
@@ -50,7 +50,7 @@
   <div class="rightcolumn">
     <div class="card">
       <h2>Underviser</h2>
-      <img src="filer/mig.jpeg" width=100%></img>
+      <img src="filer/MP.JPG" width=100%></img>
       <p>Jeg hedder Mads Peter og underviser i Fysik, Matematik og Informatik. </p>
       <p> Hvis vi er heldige og der kommer mange hold så underviser Christina også og hun er god!</p>
     </div>
