--- a/InformatikRysensteen/index.html
+++ b/InformatikRysensteen/index.html
@@ -13,6 +13,10 @@
 
 <div class="topnav">
   <a href="https://mpsteenstrup.github.io/webteknologier/InformatikRysensteen/index.html">Hjem</a>
+  <a href="/InformatikRysensteen/index.html">Hjem</a>
+  <a href="webteknologier/InformatikRysensteen/index.html">Hjem</a>
+  <a href="/webteknologier/InformatikRysensteen/index.html">Hjem</a>
+
   <a href="https://rysensteen.dk/">Rysensteen</a>
   <a href="kontakt.html">Kontakt</a>
   <a href="om.html">Om</a>
