--- a/InformatikRysensteen/index.html
+++ b/InformatikRysensteen/index.html
@@ -16,6 +16,8 @@
   <a href="/InformatikRysensteen/index.html">Hjem</a>
   <a href="webteknologier/InformatikRysensteen/index.html">Hjem</a>
   <a href="/webteknologier/InformatikRysensteen/index.html">Hjem</a>
+  <a href="../InformatikRysensteen/index.html">Hjem</a>
+
 
   <a href="https://rysensteen.dk/">Rysensteen</a>
   <a href="kontakt.html">Kontakt</a>
