--- a/mobilapp/index.html
+++ b/mobilapp/index.html
@@ -17,6 +17,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="hobbies.html">mine hobbier</a></li>
+            <li><a href="kort.html">kort</a></li>
         </ul>
     </nav>
 
