--- a/legacy/lidtSjov.html
+++ b/legacy/lidtSjov.html
@@ -12,7 +12,7 @@ div {
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
-  background-image:url('https://github.com/mpsteenstrup/webteknologier/blob/master/images/mp2.gif?raw=true');
+  background-image: url('https://mpsteenstrup.github.io/webteknologier/images/mp2.gif');
   background-repeat:no-repeat;
   background-size: cover;
 }
