--- a/legacy/lidtSjov.html
+++ b/legacy/lidtSjov.html
@@ -22,8 +22,10 @@ body {
 <body>
 
 <div>
-<a href="https://www.elfyourself.com/" style="display:block;height:100%;width:100%"></a>
+
+<a href="https://mpsteenstrup.github.io/webteknologier/legacy/vondujulesang.html" style="display:block;height:100%;width:100%"></a>
 </div>
 
 </body>
 </html>
+<a href="https://www.elfyourself.com/" style="display:block;height:100%;width:100%"></a>
