--- a/legacy/vondujulesang.html
+++ b/legacy/vondujulesang.html
@@ -9,18 +9,37 @@ div {
     height:1000px;
 }
 
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  background-repeat:no-repeat;
-  background-size: cover;
-  background-color: black;
-}
+
+    body {
+            margin: 0;
+            display: flex;
+            justify-content: center; /* Center horizontally */
+            align-items: center;   /* Center vertically */
+            height: 100vh;         /* Full viewport height */
+            background-color: #000000; /* Optional background color */
+        }
+
+
+
+        h1 {
+            position: absolute;
+            top: 20px; /* Adjust as needed */
+            width: 100%;
+            text-align: center;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  color: white;
+  font-size: 60px;
+  text-align: center;
+        }
+ 
+
 
 </style>
 </head>
 <body>
-  <iframe width="2*560" height="2*315" src="https://www.youtube.com/embed/ZGVXamg9MOw" title="Von Dü - Jul Igen [Lyrics]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <h1>GOD JUL 3. J</h1><br>
+
+  <iframe width="1120" height="630"  src="https://www.youtube.com/embed/ZGVXamg9MOw" title="Von Dü - Jul Igen [Lyrics]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 </body>
 </html>
