--- a/legacy/vondujulesang.html
+++ b/legacy/vondujulesang.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+
 <style>
 
 div {
@@ -17,6 +19,9 @@ div {
             align-items: center;   /* Center vertically */
             height: 100vh;         /* Full viewport height */
             background-color: #000000; /* Optional background color */
+            text-align: center;
+            font-family: 'Dancing Script', cursive;
+            color: white;
         }
 
 
@@ -25,11 +30,8 @@ div {
             position: absolute;
             top: 20px; /* Adjust as needed */
             width: 100%;
+            font-size: 60px;
             text-align: center;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  color: white;
-  font-size: 60px;
-  text-align: center;
         }
  
 
@@ -37,7 +39,8 @@ div {
 </style>
 </head>
 <body>
-    <h1>GOD JUL 3. J</h1><br>
+    <h1>GOD JUL 3. J</h1>
+
 
   <iframe width="1120" height="630"  src="https://www.youtube.com/embed/ZGVXamg9MOw" title="Von Dü - Jul Igen [Lyrics]" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
